# ExistOS-App-demo

./: .crt.c  .gitignore  CMakeLists.txt  README.md  ld.script  main.c  syscall.c  syscall.h
RepicoGL/: CMakeLists.txt  MemfbDefs.h  api.cpp  clear.c  get.c  glu_perspective.c  glx_impl.h  init.c  light.c  matrix.c  picotk.h  screen_config.h  select.c  specbuf.c  texture.cpp  tk.cpp  zline.c  ztriangle.c  ztriangle.inc
RepicoGL/GL/: gl.h  glu.h  oscontext.h
RepicoGL/GL/internal/: math-sll.h  zgl.h
example_0_empty/: CMakeLists.txt  main.c  toolchain.cmake
example_0_empty/include/freertos/: portmacro.h
example_1_LvGL/: CMakeLists.txt  ld.script  main.c
example_2_TinyGL/: .crt.c  CMakeLists.txt  main.c
example_2_TinyGL/RepicoGL/: arrays.c  clip.c  glu.c  glu_disk.c  glu_sphere.c  image_util.cpp  library.properties  list.c  memory.c  misc.c  screen_config.h  texture.cpp  tk.cpp  zbuffer.cpp  zdither.c  zmath.c
example_2_TinyGL/RepicoGL/GL/: glx.h
example_2_TinyGL/RepicoGL/GL/internal/: zfeatures.h  zmath.h
example_3_TinyGL/: CMakeLists.txt
example_3_TinyGL/RepicoGL/: CMakeLists.txt  debugger.h  error.c  glu_cylinder.c  glu_torus.c  glx.cpp  oscontext.c  screen_config.h  tk.cpp  vertex.c
example_3_TinyGL/RepicoGL/GL/internal/: math-ffp.h  zbuffer.h
example_3_doom/: CMakeLists.txt  main.c
example_3_doom/DOOM/: CMakeLists.txt  d_main.c  d_net.c  i_input.c  i_main.c  i_sound.c  i_system.c  i_timer.c  m_config.c  m_menu.c  m_misc.c  r_bsp.c  r_data.c  r_main.c  r_plane.c  s_sound.c  v_video.c  w_wad.c
example_3_doom/DOOM/include/: i_video.h  w_file.h
example_3_doom/DOOM/platform/: doomgeneric.h  doomgeneric_existos.c  i_video.c  w_file.c
example_3_doom/include/existosapi/: syscall.h
example_4_multithread/: CMakeLists.txt  ld.script  main.c
example_5_coremark/: CMakeLists.txt  main.c
example_5_coremark/coremark/: core_main.c  core_portme.c  core_portme.h
example_5_coremark/include/existosapi/: SystemUI.h
example_5_coremark/include/freertos/: FreeRTOSConfig.h
include/: ll_sys_api_code.h
